<resources>

    <!--Nombre de Aplicación-->

    <string name="app_name">Transmisor TCP - Joystick</string>

    <!--Opciones de Menú superior-->

    <string name="about">Acerca de</string>
    <string name="exit">Salir</string>

    <!--Drawer-->

    <string name="drawer_open">Abrir menú lateral</string>
    <string name="drawer_close">Cerrar menú lateral</string>

    <!-- Fragments -->

    <string name="behaviour_title">ENVÍO DE COMANDOS</string>
    <string name="up_button">UP</string>
    <string name="down_button">DOWN</string>
    <string name="connect_button">CONECTAR</string>
    <string name="disconnect_button">DESCONECTAR</string>
    <string name="submit_configuration">GUARDAR</string>
    <string name="default_configuration">POR DEFECTO</string>
    <string name="configuration_title">CONFIGURACIÓN</string>
    <string name="option1">Dirección IP</string>
    <string name="option2">Puerto</string>
    <string name="incoming_message_label_1">Estado del motor 1</string>
    <string name="incoming_message_label_2">Estado del motor 2</string>
    <string name="calibration_checkbox">Habilitar calibración</string>
    <string name="calibration_title">CALIBRACIÓN</string>
    <string name="calibration_description">
        Seleccionar el tiempo de conteo de interrupciones en milisegundos para la calibración.
        Valor máximo: 10000.</string>
    <string name="calibration_time">Tiempo de calibración (ms)</string>
    <string name="calibration_time_input">Tiempo (ms)</string>
    <string name="calibration_slots_input">Ranuras de disco</string>
    <string name="calibrate_motor_0_button">CALIBRAR MOTOR 0</string>
    <string name="calibrate_motor_1_button">CALIBRAR MOTOR 1</string>
    <string name="cancel_calibration_button">CANCELAR</string>
    <string name="progress_motor_0">Progreso de motor 0</string>
    <string name="progress_motor_1">Progreso de motor 1</string>

</resources>
